# CSVParser

./: CMakeLists.txt  README.md  build_binary.sh  run_tests.sh  setup.sh
include/: CSVFile.hpp  CommandHandlers.hpp  DataProcessor.hpp
src/: CSVFile.cpp  main.cpp
tests/: CMakeLists.txt  csvfile_tests.cpp  process_commands_tests.cpp
